cambio de columnistas

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -57,7 +57,8 @@ strong {
   font-weight: bold;
 }
 dfn {
-  font-style: italic;
+  font
+  -style: italic;
 }
 h1 {
   margin: .67em 0;
@@ -6755,3 +6756,6 @@ button.close {
   }
 }
 /*# sourceMappingURL=bootstrap.css.map */
+.p-0 {
+  padding: 0;
+}
