--- a/css/columnistas.css
+++ b/css/columnistas.css
@@ -1,64 +1,74 @@
-body{
-	font-family: "Oswald";
+.pad{
+    padding:0;
+}         
+section.columnistas{
+	position: relative;
+	background-color: #F0EDED;
+	border-top: solid #B00C0C;
+	padding: 5%;
 }
-.titulo{
-	color:gray;
-	display:inline-block;
-	margin-top: 4px;
+.box-red {
+	position: absolute;
+	background-color: #B00C0C;
+  	color: #FFFFFF;
+  	height: 8%;
+  	width: 20%;
+  	font-size: 18px;
+  	top: -3%;
+  	right: 40%;
+  	padding: 7px 3px;
 }
-.espacio{
-	padding-top: 27px;
+.borde {
+	border: 5px solid white;
+	display: block;
+    margin: auto;
 }
-img{
-	margin: 21px 13px 5px;
-	float: left;
+.txt-columnistas {
+	text-align: center;
+	font-size: 11px;
 }
-.double{
-	float: none;
-	margin-top: 2px;
-	margin-left: 1px;
-	display: inline;
+/*Deportes*/
+section.deportes {
+	padding-top: 5%;
 }
-.fondo {
-	background-color: #C81515;
-	padding: 1px;
+.t{
+	border:2px solid white;
 }
-.pager li > a{
-	background-color:#C81515;
-	color:white; 
-	padding: 6px 24px;
-	border:1px solid #C81515;
+.img-deportes {
+	background-image: url(../image/img_especiales.jpg);
+	background-size: cover;
+	background-repeat: no-repeat;
+    padding-top: 50%;
+    color: #FFFFFF;
+    padding-left: 12px;
+    position: relative;
 }
-.pager li > a:hover{
-	background-color:#8C0000;
-	text-decoration: underline; 
+.overlay {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	background: -moz-linear-gradient(top,  rgba(53,43,50,0.65) 21%, rgba(53,43,50,0.52) 37%, rgba(0,0,0,0.2) 76%, rgba(0,0,0,0) 100%);
+	background: -webkit-linear-gradient(top,  rgba(53,43,50,0.65) 21%,rgba(53,43,50,0.52) 37%,rgba(0,0,0,0.2) 76%,rgba(0,0,0,0) 100%);
+	background: linear-gradient(to bottom,  rgba(53,43,50,0.65) 21%,rgba(53,43,50,0.52) 37%,rgba(0,0,0,0.2) 76%,rgba(0,0,0,0) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a6352b32', endColorstr='#00000000',GradientType=0 );
+	padding-top: 37%;
+	padding-left: 6%;
 }
-a{
-	color:white;
-	font-size: 19px;
-	margin-left: 18px;
+.red {
+	color: #C00101;
+	margin: 10px auto;
 }
-a:active{
-	background-color: red;
+.white {
+	color: white;
+	margin: 2px;
+	font-size: 18px;
 }
-/*blogueros*/
-.colum1{
-	background-color:#C3C3C3;
-	margin-top: 5px;
-    height: 100px;
+.border {
+	border: 1px solid gray;
+	margin-bottom: 30px;
 }
-.datos{
-	display: inline-block;
-	margin-top: 12px;
-}
-.blog{
-	text-decoration: none;
-	color:gray;
-	font-size: 16px;
-}
-.left{
-	padding-left: 8px;
-}
-.intelineado{
-	line-height: 0.3;
+.pd {
+	padding-top: 12px;
 }
